<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="my_spotify_streamer">Spotify Streamer</string>
    <string name="my_scores_app">Scores App</string>
    <string name="my_library_app">Library App</string>
    <string name="my_build_bigger">Build it Bigger</string>
    <string name="my_xyz_reader">XYZ Reader</string>
    <string name="my_capstone">Capstone: My Own App</string>
</resources>
