<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfeaf1">

    <TextView android:text="@string/app_title" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center|center_vertical"
        android:height="56dp"
        android:textSize="@dimen/abc_text_size_large_material"
        android:id="@+id/textView"
        android:layout_marginBottom="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_spotify_streamer"
        android:id="@+id/button"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:layout_marginBottom="@dimen/my_button_margin_bottom"
        android:layout_alignParentTop="false"
        android:paddingTop="@dimen/my_button_padding_vertical"
        android:width="@dimen/my_button_with"
        android:singleLine="true"
        android:paddingBottom="@dimen/my_button_padding_vertical" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_scores_app"
        android:id="@+id/button2"
        android:layout_alignWithParentIfMissing="false"
        android:background="#F08C35"
        android:paddingRight="@dimen/my_button_padding_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="@dimen/my_button_padding_vertical"
        android:paddingBottom="@dimen/my_button_padding_vertical"
        android:paddingLeft="@dimen/my_button_padding_horizontal"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/my_button_margin_bottom"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:width="@dimen/my_button_with" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_library_app"
        android:id="@+id/button4"
        android:layout_alignWithParentIfMissing="false"
        android:background="#F08C35"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="@dimen/my_button_padding_vertical"
        android:paddingBottom="@dimen/my_button_padding_vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button2"
        android:layout_marginBottom="@dimen/my_button_margin_bottom"
        android:width="@dimen/my_button_with" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_build_bigger"
        android:id="@+id/button3"
        android:layout_alignWithParentIfMissing="false"
        android:background="#F08C35"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="@dimen/my_button_padding_vertical"
        android:paddingBottom="@dimen/my_button_padding_vertical"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/my_button_margin_bottom"
        android:width="@dimen/my_button_with" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_xyz_reader"
        android:id="@+id/button5"
        android:layout_alignWithParentIfMissing="false"
        android:background="#F08C35"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="@dimen/my_button_padding_vertical"
        android:paddingBottom="@dimen/my_button_padding_vertical"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/my_button_margin_bottom"
        android:width="@dimen/my_button_with" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_capstone"
        android:id="@+id/button6"
        android:layout_alignWithParentIfMissing="false"
        android:background="#fff02f41"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingTop="@dimen/my_button_padding_vertical"
        android:paddingBottom="@dimen/my_button_padding_vertical"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:width="@dimen/my_button_with" />

</RelativeLayout>
